--- a/PetFlix.html
+++ b/PetFlix.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style\owl.carousel.css">
     <link rel="stylesheet" href="style\owl.theme.default.css">
     <title>PetFlix</title>
+    <link rel="shortcut icon" type="image/x-icon" href="img\favicon.ico">
 </head>
 <body>
     <header>
